--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
                     <use xlink:href="#sidebar-icon" href="#sidebar-icon"></use>
                 </svg>
             </md-button>
-            <div v-if="!options.hideSideBar">
+            <div v-if="!options.hideSideBar" class="hide-sidebar">
                 <md-button class="md-raised md-icon-button" title="Hide sidebar" v-on:click="toggleSidebar()">
                     <svg>
                         <use xlink:href="#hide-sidebar-icon" href="#hide-sidebar-icon"></use>
